--- a/src/Components/Task/task.css
+++ b/src/Components/Task/task.css
@@ -1,11 +1,23 @@
 
-.test{
-    color:aqua ;
+.test {
+    color: aqua;
 }
 
-.css-1gzkxga-MuiSelect-select-MuiInputBase-input-MuiFilledInput-input.MuiSelect-select{
+.css-1gzkxga-MuiSelect-select-MuiInputBase-input-MuiFilledInput-input.MuiSelect-select {
     font-family: sans-serif;
     color: red;
-    font-size: 40px;
-    width: 250px;
+    font-size: 15px;
+    height: 50px;
+}
+
+.taskWrap {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.taskContent {
+    display: flex;
+    flex-direction: row;
 }
