Change styles in Tasks Page

--- a/src/Components/Task/Task.sass
+++ b/src/Components/Task/Task.sass
@@ -8,7 +8,9 @@
   margin: 0 auto
   margin-bottom: 20px
   padding-bottom: 20px
-  background-color: #F5EEDC
+  background-color: inherit
+  border: 1px solid grey
+  border-radius: 10px
 
 .taskContent
   display: flex
@@ -18,22 +20,27 @@
 
 .title
   font-size: 20px
-  color: #ECB390
+  color: grey
+  margin: 15px
+  font-weight: bold
 
 .taskBody
   display: flex
   flex-direction: row
-  justify-content: flex-end
+  justify-content: space-around
 
-  width: 80%
+  width: 100%
 
 .taskText
   margin-right: 10px
-  color: #ECB390
+  color: grey
   margin-top: 10px
 
 .textWrap
-  width: 300px
+  width: 600px
+  margin: 10px
+  padding: 5px
+  background-color: #b5c9b5
 
 
 .textBody
@@ -54,8 +61,8 @@
   margin-left: 10px
   padding-left: 10px
 
-.status, #demo-radio-buttons-group-label
-  color: #DD4A48
+.status
+  color: grey
 
 .deleteStatusWrap
   display: flex
@@ -64,5 +71,5 @@
   align-items: center
 
 .css-ahj2mt-MuiTypography-root
-  color: #DD4A48
+  color: grey
 
