--- a/src/Pages/TaskPage/TaskPage.sass
+++ b/src/Pages/TaskPage/TaskPage.sass
@@ -2,7 +2,7 @@
   width: 100%
   height: 100%
   margin: 0 auto
-  padding-top: 100px
+  margin-top: 50px
   display: flex
   flex-direction: column
   align-items: center
