Add responsive styles to Task List

--- a/src/Components/Task/Task.sass
+++ b/src/Components/Task/Task.sass
@@ -73,3 +73,56 @@
 .css-ahj2mt-MuiTypography-root
   color: grey
 
+@media (max-width: 850px )
+    .taskWrap
+      width: 600px
+    .taskText
+      height: 50px
+
+
+@media (max-width: 635px)
+    .taskWrap
+      width: 480px
+    .taskText
+      font-size: 13px
+      margin-top: 5px
+    .textWrap
+      width: 95%
+      margin: 0 auto
+      height: 50px
+    .radioWrap
+      display: flex
+      flex-direction: row
+    .status
+      margin-bottom: 5px
+    .taskBody
+      flex-direction: column
+@media (max-width: 515px)
+    .taskWrap
+      width: 370px
+      padding: 10px
+    .taskText
+     font-size: 11px
+     margin-top: 3px
+    .textWrap
+     height: 60px
+@media (max-width: 415px)
+  .taskWrap
+    width: 350px
+    padding: 5px
+  .taskText
+    font-size: 11px
+    margin-top: 3px
+  .textWrap
+    height: 60px
+  .title
+    font-size: 15px
+    margin: 5px
+  .status
+    font-size: 12px
+@media (max-width: 385px)
+  .taskWrap
+    width: 290px
+  .textWrap
+    width: 280px
+    height: 45px
