Add sorting and filtration

--- a/src/Pages/TaskPage/TaskPage.sass
+++ b/src/Pages/TaskPage/TaskPage.sass
@@ -8,6 +8,18 @@
   align-items: center
   .link
     color: #DD4A48
+.btnSelWrap
+  display: flex
+  flex-direction: row
+  justify-content: center
+  align-items: center
+select
+  background-color: inherit
+  width: 120px
+  height: 42.25px
+  border: 1px solid #a4a4a4
+  border-radius: 5px
+  color: #7A7C7A
 
 body
   background-color: #C0D8C0
