--- a/src/Pages/TaskPage/TaskPage.sass
+++ b/src/Pages/TaskPage/TaskPage.sass
@@ -11,15 +11,17 @@
 .btnSelWrap
   display: flex
   flex-direction: row
-  justify-content: center
   align-items: center
-select
+select, .showBtn
   background-color: inherit
   width: 120px
   height: 42.25px
   border: 1px solid #a4a4a4
   border-radius: 5px
   color: #7A7C7A
+.showBtn
+  width: 80px
+  margin-left: 25px
 
 body
   background-color: #C0D8C0
