Refactor get request, add sorting button

--- a/src/Pages/TaskPage/TaskPage.sass
+++ b/src/Pages/TaskPage/TaskPage.sass
@@ -23,6 +23,9 @@ select, .showBtn
   width: 80px
   margin-left: 25px
 
+img
+    width: 39px
+
 body
   background-color: #C0D8C0
   color: whitesmoke
