--- a/src/Pages/TaskPage/TaskPage.sass
+++ b/src/Pages/TaskPage/TaskPage.sass
@@ -8,6 +8,7 @@
   align-items: center
   .link
     color: #DD4A48
+    text-decoration: none
 .btnSelWrap
   display: flex
   flex-direction: row
@@ -25,7 +26,14 @@ select, .showBtn
 
 img
     width: 38px
-
+.btnWrap
+  display: flex
+  flex-direction: row
+.pageBtn
+  margin: 10px
+  background-color: inherit
+  color: grey
+  border: 0.5px solid grey
 body
   background-color: #C0D8C0
   color: whitesmoke
