--- a/src/Pages/TaskPage/TaskPage.sass
+++ b/src/Pages/TaskPage/TaskPage.sass
@@ -38,6 +38,20 @@ body
   background-color: #C0D8C0
   color: whitesmoke
 
-  @media (max-width: 850px )
-    .wrapper
-      margin-top: 20px
+@media (max-width: 850px )
+  .wrapper
+    margin-top: 20px
+@media (max-width: 635px)
+  .showBtn
+    width: 40px
+    font-size: 11px
+    line-height: 12px
+    text-align: center
+@media (max-width: 515px)
+  .showBtn
+    margin-left: 10px
+  select
+    width: 90px
+    font-size: 10px
+
+
