--- a/src/Pages/TaskPage/TaskPage.sass
+++ b/src/Pages/TaskPage/TaskPage.sass
@@ -1,8 +1,7 @@
 .wrapper
   width: 100%
   height: 100%
-  margin: 0 auto
-  margin-top: 50px
+  margin: 50px auto 0
   display: flex
   flex-direction: column
   align-items: center
